# qqbot_rust

./: .env  .gitignore  Cargo.toml  LICENSE  bot.env  bot.env.example  docker-compose.yml  dockerfile  readme.md  tt.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  main.rs  web.rs
src/bot_error/: mod.rs
src/bot_web_hook/: bot_error.rs  bot_trait.rs  message.rs  mod.rs  posix.rs
src/web_hook/: mod.rs
