[package]
name = "aoe4bot"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
ed25519-dalek =  { version = "2" }
lazy_static = "1.5.0"
mysql = "26.0.0"
rand = "0.9.0"
rand_core = "0.9.3"
serde = "1.0.218"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
