[package]
name = "qqbot_rust"
version = "0.1.0"
edition = "2024"
[lib]

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
dotenv = "0.15.0"
ed25519-dalek =  { version = "2" }
lazy_static = "1.5.0"
reqwest =  { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.0",default-features = false, features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
tklog = "0.2.9"
async-trait = "0.1.87"
syn = "2.0.100"
quote = "1.0.40"
macros = { path = "./macros" }
actix-files = "0.6.6"
[workspace]
members = ["macros"]
